# pochven

./: .dockerignore  .gitignore  Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
app/: settings.py  urls.py
pochven/: admin.py  apps.py  models.py  systems.py  tests.py  views.py
pochven/management/: post_migrate.py
pochven/management/commands/: load_seed_data.py
pochven/migrations/: 0001_initial.py  0002_auto_20220610_2012.py  0003_auto_20220610_2242.py  0004_pochvenpermission.py  0005_auto_20220615_1552.py
pochven/templates/: base5.html  login.html  register.html  scouting.html  username.html
pochven/templates/accounts/: password_change_done.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
pochven/templates/includes/: nav.html
scripts/: format.sh  lint.sh  test.sh
