[tool.poetry]
name = "pochven-scouts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.13"
django-extensions = "^3.1.5"
gunicorn = "^20.1.0"
django-environ = "^0.8.1"
debugpy = "1.5.1"
psycopg2-binary = "^2.9.3"
django-debug-toolbar = "^3.4.0"
django-registration = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
