[tool.poetry]
name = "pochven-scouts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.13"
django-extensions = "^3.1.5"
gunicorn = "^20.1.0"
django-environ = "^0.8.1"
debugpy = "1.5.1"
psycopg2-binary = "^2.9.3"
django-debug-toolbar = "^3.4.0"
django-registration = "^3.3"
autoflake = "^1.4"
django-bootstrap5 = "^21.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
autoflake = "^1.4"
isort = "^5.10.1"
autoflake8 = "^0.3.2"
pylint = "^2.14.2"
flake8 = "^4.0.1"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
